--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@langchain/community": "^0.3.40",
+        "@langchain/openai": "^0.5.5",
         "@radix-ui/react-slot": "^1.1.2",
         "@story-protocol/core-sdk": "1.3.0-beta.3",
         "@types/express": "^5.0.0",
@@ -25,6 +27,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
+        "langchain": "^0.3.21",
         "lucide-react": "^0.477.0",
         "open": "^10.1.0",
         "openai": "^4.85.4",
@@ -34,7 +37,8 @@
         "react-dom": "^19.0.0",
         "tailwind-merge": "^3.0.2",
         "tailwindcss-animate": "^1.0.7",
-        "viem": "^2.8.12"
+        "viem": "^2.8.12",
+        "zod": "^3.24.2"
     },
     "devDependencies": {
         "@types/cors": "^2.8.17",
